Update Analyze a vulnerable system.html

--- a/Analyze a vulnerable system.html
+++ b/Analyze a vulnerable system.html
@@ -165,7 +165,7 @@
         <p>To safeguard the database server, authentication, authorization, and accounting mechanisms are implemented. This involves using robust passwords, role-based access controls, and multi-factor authentication to limit user privileges. Data in motion is encrypted using TLS, replacing SSL. To protect against unauthorized access from random internet users, IP allow-listing is utilized, restricting connections to the database server to corporate offices.</p>
 
         <div class="back-link">
-            <a href="index.html">Home</a>
+            <a href="Assets & Threats & Vulnerabilities.html">Back</a>
         </div>
     </div>
 </body>
