--- a/Assets & Threats & Vulnerabilities.html
+++ b/Assets & Threats & Vulnerabilities.html
@@ -4,60 +4,95 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assets & Threats & Vulnerabilities</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
-        /* Import Google Fonts and maintain existing styles */
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f0f0;
             color: #333;
             margin: 0;
-            padding: 0px;
+            padding: 0;
         }
+
         header {
             background-color: #1c1c1c;
             padding: 20px;
             text-align: center;
             margin-bottom: 20px;
         }
+
         header h1 {
-            font-family: 'Press Start 2P', cursive;
+            font-family: 'Roboto', sans-serif;
             color: #8cff8c;
             margin: 0;
         }
-        .back-link a {
+
+        /* Home Link within Overview Container */
+        .home-link-top {
+            text-align: left;           
+            padding: 10px 0;         
+        }
+
+        .home-link-top a {
             font-family: 'Press Start 2P', cursive;
             text-decoration: none;
             background-color: #1c1c1c;
             color: #8cff8c;
             padding: 10px 20px;
             border-radius: 5px;
-            
+            transition: background-color 0.3s ease;
         }
+        
+        .home-link-top a:hover {
+            background-color: #333;
+        }
+
+        /* Overview Section Styling with added margin */
         .overview {
-            background-color: #fff;
             padding: 20px;
+            margin: 20px auto;
+            background-color: #fff;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
             max-width: 800px;
-            margin: 0 auto;
         }
+
         .overview h2 {
             color: #1c1c1c;
             font-size: 24px;
-            margin-top: 20px;
+            margin-top: 0;
+            text-align: center;
         }
+
+        /* Projects Container Styling */
+        .projects-container {
+            padding: 20px;
+            margin: 20px auto;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
+        }
+
+        .projects-container h2 {
+            color: #1c1c1c;
+            font-size: 24px;
+            margin-top: 0; 
+            text-align: center;
+        }
+
+        /* Projects List Styling */
         .projects {
             list-style-type: none;
             padding: 0;
             margin: 0;
-            max-width: 800px;
-            margin: 0 auto;
         }
+
         .projects li {
             margin-bottom: 10px;
         }
+
         .projects li a {
             display: block;
             padding: 10px;
@@ -66,32 +101,37 @@
             text-decoration: none;
             border-radius: 5px;
             transition: background-color 0.3s ease;
+            text-align: center;
         }
+
         .projects li a:hover {
             background-color: #333;
         }
     </style>
 </head>
 <body>
+
     <header>
         <h1>Assets & Threats & Vulnerabilities</h1>
     </header>
+
     <div class="overview">
-        <div class="back-link">
-            <a href="index.html">Home</a>
+        <div class="home-link-top">  
+            <a href="index.html">Home</a>  
         </div>
         <h2>Overview</h2>
         <p>
             Welcome to the Assets & Threats & Vulnerabilities page. Here you will find links to various projects related to asset management, threat assessment, and vulnerability analysis. Each project focuses on different aspects of cybersecurity to enhance understanding and readiness against potential risks.
         </p>
     </div>
-    <div class="projects">
+
+    <div class="projects-container">
         <h2>Projects</h2>
-        <ul>
+        <ul class="projects">
             <li><a href="Risk register.html">Risk Register</a></li>
             <li><a href="Analyze a vulnerable system.html">Vulnerability Assessment Project</a></li>
-            <!-- Add more projects as needed -->
-        </ul>
+            <li><a href="Data Leak Worksheet.html">Data Handling Practices</a></li>
+            </ul>
     </div>
 </body>
 </html>
