Update Assets & Threats & Vulnerabilities.html

--- a/Assets & Threats & Vulnerabilities.html
+++ b/Assets & Threats & Vulnerabilities.html
@@ -128,9 +128,9 @@
     <div class="projects-container">
         <h2>Projects</h2>
         <ul class="projects">
-            <li><a href="Risk register.html">Risk Register</a></li>
-            <li><a href="Analyze a vulnerable system.html">Vulnerability Assessment Project</a></li>
-            <li><a href="Data Leak Worksheet.html">Data Handling Practices</a></li>
+            <li><a href="https://www.canva.com/design/DAGIW7FIzi8/1I5ozzxoWDY1MJgQ3fj3uA/view">Risk Register</a></li>
+            <li><a href="https://www.canva.com/design/DAGIW-b_7xg/QLYfOcUhcpbKxE8Q99LM8w/view">Vulnerability Assessment Project</a></li>
+            <li><a href="https://www.canva.com/design/DAGIW__zct4/tN8O7b4VaRmLU-LxEbdiow/view">Data Handling Practices</a></li>
             </ul>
     </div>
 </body>
