Update Assets & Threats & Vulnerabilities.html

--- a/Assets & Threats & Vulnerabilities.html
+++ b/Assets & Threats & Vulnerabilities.html
@@ -120,18 +120,17 @@
             <a href="index.html">Home</a>  
         </div>
         <h2>Overview</h2>
-        <p>
-            Welcome to the Assets & Threats & Vulnerabilities page. Here you will find links to various projects related to asset management, threat assessment, and vulnerability analysis. Each project focuses on different aspects of cybersecurity to enhance understanding and readiness against potential risks.
-        </p>
+        <p>Welcome to the Assets & Threats & Vulnerabilities page. Here you will find links to various projects related to asset management, threat assessment, and vulnerability analysis. Each project focuses on different aspects of cybersecurity to enhance understanding and readiness against potential risks.</p>
     </div>
 
     <div class="projects-container">
         <h2>Projects</h2>
         <ul class="projects">
             <li><a href="https://www.canva.com/design/DAGIW7FIzi8/1I5ozzxoWDY1MJgQ3fj3uA/view">Risk Register</a></li>
-            <li><a href="https://www.canva.com/design/DAGIW-b_7xg/QLYfOcUhcpbKxE8Q99LM8w/view">Vulnerability Assessment Project</a></li>
             <li><a href="https://www.canva.com/design/DAGIW__zct4/tN8O7b4VaRmLU-LxEbdiow/view">Data Handling Practices</a></li>
-            </ul>
+            <li><a href="https://www.canva.com/design/DAGIXPOx0LM/UqgbPSks5TwF8RcOljxfgw/view">Decrypt an encrypted message</a></li>
+            <li><a href="https://www.canva.com/design/DAGIW-b_7xg/QLYfOcUhcpbKxE8Q99LM8w/view">Vulnerability Assessment Project</a></li>
+        </ul>
     </div>
 </body>
 </html>
