Update Assets & Threats & Vulnerabilities.html

--- a/Assets & Threats & Vulnerabilities.html
+++ b/Assets & Threats & Vulnerabilities.html
@@ -129,6 +129,7 @@
             <li><a href="https://www.canva.com/design/DAGIW7FIzi8/1I5ozzxoWDY1MJgQ3fj3uA/view">Risk Register</a></li>
             <li><a href="https://www.canva.com/design/DAGIW__zct4/tN8O7b4VaRmLU-LxEbdiow/view">Data Handling Practices</a></li>
             <li><a href="https://www.canva.com/design/DAGIXPOx0LM/UqgbPSks5TwF8RcOljxfgw/view">Decrypt an encrypted message</a></li>
+            <li><a href="https://www.canva.com/design/DAGIfQ9Dp-g/J4GnxcmGjrivtIr-JM0X8g/view">Create hash values</a></li>
             <li><a href="https://www.canva.com/design/DAGIW-b_7xg/QLYfOcUhcpbKxE8Q99LM8w/view">Vulnerability Assessment Project</a></li>
         </ul>
     </div>
