Update Assets & Threats & Vulnerabilities.html

--- a/Assets & Threats & Vulnerabilities.html
+++ b/Assets & Threats & Vulnerabilities.html
@@ -131,6 +131,7 @@
             <li><a href="https://www.canva.com/design/DAGIXPOx0LM/UqgbPSks5TwF8RcOljxfgw/view">Decrypt an encrypted message</a></li>
             <li><a href="https://www.canva.com/design/DAGIfQ9Dp-g/J4GnxcmGjrivtIr-JM0X8g/view">Create hash values</a></li>
             <li><a href="https://www.canva.com/design/DAGIW-b_7xg/QLYfOcUhcpbKxE8Q99LM8w/view">Vulnerability Assessment Project</a></li>
+            <li><a href="https://www.canva.com/design/DAGJETreEqE/AveQTCF-AG4aDC5EG1Fq_g/view">Access controls worksheet</a></li>
         </ul>
     </div>
 </body>
